--- a/res/layout/order_item.xml
+++ b/res/layout/order_item.xml
@@ -12,17 +12,25 @@
                     android:orientation="vertical"
                     android:padding="@dimen/activity_vertical_margin" >
 
-                    <TextView
+                    <LinearLayout
                         android:id="@+id/view_order_header"
-                        android:layout_width="fill_parent"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/rounded_corner_dark"
-                        android:gravity="center_horizontal"
-                        android:padding="@dimen/activity_vertical_margin"
-                        android:text="Order 12 (NEW)"
-                        android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:textColor="#ffffff"
-                        android:textStyle="bold" />
+                        android:orientation="vertical" >
+
+                        <TextView
+                            android:id="@+id/view_order_number"
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_horizontal"
+                            android:padding="@dimen/activity_vertical_margin"
+                            android:text="Order 12 (NEW)"
+                            android:textAppearance="?android:attr/textAppearanceMedium"
+                            android:textColor="#ffffff"
+                            android:textStyle="bold" />
+
+                    </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -66,6 +74,33 @@
                                 android:layout_weight="2"
                                 android:text="Apr 11, 2013"
                                 android:textAppearance="?android:attr/textAppearanceSmall" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="@dimen/activity_horizontal_margin" >
+
+                            <TextView
+                                android:id="@+id/textView4"
+                                android:layout_width="wrap_content"
+                                android:layout_height="fill_parent"
+                                android:layout_marginRight="@dimen/activity_horizontal_margin"
+                                android:gravity="center_vertical"
+                                android:text="Price: "
+                                android:textAppearance="?android:attr/textAppearanceMedium"
+                                android:textSize="16sp" />
+
+                            <TextView
+                                android:id="@+id/view_order_price"
+                                android:layout_width="wrap_content"
+                                android:layout_height="fill_parent"
+                                android:layout_marginRight="@dimen/activity_horizontal_margin"
+                                android:gravity="center_vertical"
+                                android:text="$12"
+                                android:textAppearance="?android:attr/textAppearanceMedium"
+                                android:textSize="21sp"
+                                android:textStyle="bold" />
                         </LinearLayout>
 
                     </LinearLayout>
@@ -160,7 +195,7 @@
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="@dimen/activity_horizontal_margin"
-                                android:layout_weight="2"
+                                android:layout_weight="60"
                                 android:orientation="vertical" >
 
                                 <TextView
@@ -169,37 +204,14 @@
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="top"
                                     android:text="Martini"
-                                    android:textAppearance="?android:attr/textAppearanceLarge"
-                                    android:textSize="15sp" />
+                                    android:textAppearance="?android:attr/textAppearanceLarge" />
 
                                 <TextView
                                     android:id="@+id/view_order_description"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="1/3 oz Dry Vermouth"
-                                    android:textSize="11sp" />
-                            </LinearLayout>
-
-                            <LinearLayout
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center_vertical"
-                                android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                                android:gravity="center_vertical|center_horizontal"
-                                android:orientation="vertical" >
-
-                                <TextView
-                                	android:id="@+id/view_order_price"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="top|center_horizontal"
-                                    android:layout_margin="@dimen/activity_vertical_margin"
-                                    android:text="$0"
-                                    android:textAppearance="?android:attr/textAppearanceLarge"
-                                    android:textColor="#995555"
-                                    android:textSize="18sp"
-                                    android:textStyle="bold" />
-
+                                    android:textSize="12sp" />
                             </LinearLayout>
 
                         </LinearLayout>
