--- a/res/layout/dialog_drink_order.xml
+++ b/res/layout/dialog_drink_order.xml
@@ -1,177 +1,179 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="fill_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:background="#eeeeee"
+    android:orientation="vertical"
+    android:padding="@dimen/activity_vertical_margin" >
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#eeeeee"
-        android:orientation="vertical"
-        android:padding="@dimen/activity_vertical_margin" >
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_weight="2"
+        android:orientation="vertical" >
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:layout_weight="2"
-            android:orientation="vertical" >
-
-            <TextView
-                android:id="@+id/view_dialog_drink_title"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:background="@drawable/rounded_corner_dark"
-                android:gravity="center"
-                android:padding="@dimen/activity_vertical_margin"
-                android:text="Sambuca on the rocks"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="#ffffff"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:layout_weight="2"
-            android:visibility="gone" >
-
-            <Button
-                android:id="@+id/Button02"
-                style="?android:attr/borderlessButtonStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="35dp"
-                android:layout_marginRight="@dimen/activity_horizontal_margin"
-                android:layout_marginTop="8dp"
-                android:layout_weight="2"
-                android:background="@drawable/rounded_corner"
-                android:drawableLeft="@drawable/like"
-                android:text=" Like"
-                android:textColor="#aaaaaa"
-                android:textSize="14sp" />
-
-            <Button
-                android:id="@+id/Button03"
-                style="?android:attr/borderlessButtonStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="35dp"
-                android:layout_marginRight="@dimen/activity_horizontal_margin"
-                android:layout_marginTop="8dp"
-                android:layout_weight="2"
-                android:background="@drawable/rounded_corner"
-                android:drawableLeft="@drawable/comment"
-                android:text=" Comment"
-                android:textColor="#aaaaaa"
-                android:textSize="14sp" />
-
-            <Button
-                android:id="@+id/button1"
-                style="?android:attr/borderlessButtonStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="35dp"
-                android:layout_marginTop="8dp"
-                android:layout_weight="2"
-                android:background="@drawable/rounded_corner"
-                android:drawableLeft="@android:drawable/ic_menu_share"
-                android:text="Share"
-                android:textColor="#aaaaaa"
-                android:textSize="14sp" />
-
-            <RatingBar
-                android:id="@+id/ratingBar1"
-                android:layout_width="wrap_content"
-                android:layout_height="42dp"
-                android:max="1"
-                android:numStars="1"
-                android:progress="1"
-                android:rating="1"
-                android:stepSize="1" />
-
-        </LinearLayout>
-
-        <LinearLayout
+        <TextView
+            android:id="@+id/view_dialog_drink_title"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
             android:layout_weight="2"
-            android:orientation="horizontal" >
+            android:background="@drawable/rounded_corner_dark"
+            android:gravity="center"
+            android:padding="@dimen/activity_vertical_margin"
+            android:text="Sambuca on the rocks"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="#ffffff"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+    </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:background="@drawable/rounded_corner"
-                android:padding="@dimen/activity_vertical_margin" >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_weight="2"
+        android:visibility="gone" >
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical" >
-
-                    <TextView
-                 android:id="@+id/view_dialog_drink_description"
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                        android:text="* 1 shot Sambuca\n* Rocks\n* 3 coffee beans for good luck"
-                        android:textSize="12sp" />
-
-                    <Button
-                        android:id="@+id/button2"
-                        style="?android:attr/buttonStyleSmall"
-                        android:layout_width="fill_parent"
-                        android:layout_height="32dp"
-                        android:drawableLeft="@drawable/wrench"
-                        android:text="Customize drink"
-                        android:textSize="12sp" />
-
-                </LinearLayout>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="80dp"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                android:background="@drawable/rounded_corner"
-                android:gravity="center_vertical|center_horizontal"
-                android:orientation="vertical"
-                android:padding="3dp" >
-
-                <TextView
-                    android:id="@+id/view_dialog_drink_price"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:text="$6"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textColor="#995555"
-                    android:textSize="22sp"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="2" >
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="fill_parent"
+        <Button
+            android:id="@+id/Button02"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="8dp"
             android:layout_weight="2"
             android:background="@drawable/rounded_corner"
-            android:gravity="center_vertical" >
+            android:drawableLeft="@drawable/like"
+            android:text=" Like"
+            android:textColor="#aaaaaa"
+            android:textSize="14sp" />
+
+        <Button
+            android:id="@+id/Button03"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="8dp"
+            android:layout_weight="2"
+            android:background="@drawable/rounded_corner"
+            android:drawableLeft="@drawable/comment"
+            android:text=" Comment"
+            android:textColor="#aaaaaa"
+            android:textSize="14sp" />
+
+        <Button
+            android:id="@+id/button1"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:layout_marginTop="8dp"
+            android:layout_weight="2"
+            android:background="@drawable/rounded_corner"
+            android:drawableLeft="@android:drawable/ic_menu_share"
+            android:text="Share"
+            android:textColor="#aaaaaa"
+            android:textSize="14sp" />
+
+        <RatingBar
+            android:id="@+id/ratingBar1"
+            android:layout_width="wrap_content"
+            android:layout_height="42dp"
+            android:max="1"
+            android:numStars="1"
+            android:progress="1"
+            android:rating="1"
+            android:stepSize="1" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_weight="2"
+        android:orientation="horizontal" >
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:background="@drawable/rounded_corner"
+            android:padding="@dimen/activity_vertical_margin" >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" >
+
+                <TextView
+                    android:id="@+id/view_dialog_drink_description"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                    android:text="* 1 shot Sambuca\n* Rocks\n* 3 coffee beans for good luck"
+                    android:textSize="12sp" />
+
+                <Button
+                    android:id="@+id/button2"
+                    style="?android:attr/buttonStyleSmall"
+                    android:layout_width="fill_parent"
+                    android:layout_height="32dp"
+                    android:drawableLeft="@drawable/wrench"
+                    android:text="Customize drink"
+                    android:textSize="12sp" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="80dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:background="@drawable/rounded_corner"
+            android:gravity="center_vertical|center_horizontal"
+            android:orientation="vertical"
+            android:padding="3dp" >
 
             <TextView
-                android:id="@+id/textView1"
+                android:id="@+id/view_dialog_drink_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                android:text="Tip:"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textSize="12sp" />
+                android:layout_gravity="center_horizontal"
+                android:text="$6"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="#995555"
+                android:textSize="22sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="2" >
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="2"
+        android:background="@drawable/rounded_corner"
+        android:gravity="center_vertical" >
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:text="Tip:"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textSize="12sp" />
+
+        <RadioGroup
+            android:id="@+id/tipPercentage"
+            android:layout_width="wrap_content"
+            android:orientation="horizontal"
+            android:layout_height="wrap_content" >
 
             <RadioButton
                 android:id="@+id/RadioButton02"
@@ -199,21 +201,20 @@
                 android:id="@+id/radioButton2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
+        </RadioGroup>
 
-            <EditText
-                android:id="@+id/editText1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="@dimen/activity_horizontal_margin"
-                android:layout_weight="1"
-                android:ems="10"
-                android:inputType="numberDecimal"
-                android:textSize="12sp" >
+        <EditText
+            android:id="@+id/editText1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:layout_weight="1"
+            android:ems="10"
+            android:inputType="numberDecimal"
+            android:textSize="12sp" >
 
-                <requestFocus />
-            </EditText>
-
-        </LinearLayout>
-
+            <requestFocus />
+        </EditText>
     </LinearLayout>
 
+</LinearLayout>
