--- a/res/layout/dialog_drink_order.xml
+++ b/res/layout/dialog_drink_order.xml
@@ -204,7 +204,7 @@
         </RadioGroup>
 
         <EditText
-            android:id="@+id/editText1"
+            android:id="@+id/editTextPercentage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
