--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -19,24 +19,38 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textSize="24sp" />
 
-    <FrameLayout
-		android:id="@+id/view_active_venue"
-        android:layout_width="fill_parent"
+    <LinearLayout
+        android:id="@+id/view_active_venue"
+        android:layout_width="match_parent"
         android:layout_height="42dp"
         android:layout_margin="@dimen/activity_vertical_margin"
-        android:background="@drawable/rounded_corner" >
+        android:background="@drawable/rounded_corner"
+        android:divider="@drawable/div_light_grey_vertical"
+        android:dividerPadding="1dp"
+        android:orientation="horizontal"
+        android:showDividers="middle" >
 
         <Button
-			android:id="@+id/button_active_venue"
+            android:id="@+id/button_active_venue"
             style="?android:attr/borderlessButtonStyle"
-            android:layout_width="fill_parent"
+            android:layout_width="0dp"
             android:layout_height="fill_parent"
+            android:layout_weight="2"
             android:drawableLeft="@drawable/ic_checked_in"
             android:gravity="left|center_vertical"
             android:text="Checked in at Finn Mc&apos;Cools\n(3 open orders)"
             android:textSize="14sp" />
 
-    </FrameLayout>
+        
+        <Button
+            android:id="@+id/check_out"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="45dp"
+            android:layout_height="fill_parent"
+            android:drawableRight="@drawable/closewindow"
+            android:gravity="left|center_vertical"
+            android:textSize="14sp" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
