--- a/res/layout/order_item.xml
+++ b/res/layout/order_item.xml
@@ -49,7 +49,8 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Placed at: "
-                                android:textAppearance="?android:attr/textAppearanceSmall" />
+                                android:textAppearance="?android:attr/textAppearanceSmall"
+                                android:textSize="12sp" />
 
                             <TextView
                                 android:id="@+id/view_order_time"
@@ -57,7 +58,7 @@
                                 android:layout_height="wrap_content"
                                 android:text="9:22 PM"
                                 android:textColor="#995555"
-                                android:textSize="16sp"
+                                android:textSize="12sp"
                                 android:textStyle="bold" />
 
                             <TextView
@@ -65,7 +66,8 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text=" on "
-                                android:textAppearance="?android:attr/textAppearanceSmall" />
+                                android:textAppearance="?android:attr/textAppearanceSmall"
+                                android:textSize="12sp" />
 
                             <TextView
                                 android:id="@+id/view_order_date"
@@ -73,49 +75,25 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight="2"
                                 android:text="Apr 11, 2013"
-                                android:textAppearance="?android:attr/textAppearanceSmall" />
-                        </LinearLayout>
+                                android:textAppearance="?android:attr/textAppearanceSmall"
+                                android:textSize="12sp" />
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/activity_horizontal_margin" >
-
-                            <TextView
-                                android:id="@+id/textView4"
-                                android:layout_width="wrap_content"
-                                android:layout_height="fill_parent"
-                                android:layout_marginRight="@dimen/activity_horizontal_margin"
-                                android:gravity="center_vertical"
-                                android:text="Price: "
-                                android:textAppearance="?android:attr/textAppearanceMedium"
-                                android:textSize="16sp" />
-
-                            <TextView
-                                android:id="@+id/view_order_price"
-                                android:layout_width="wrap_content"
-                                android:layout_height="fill_parent"
-                                android:layout_marginRight="@dimen/activity_horizontal_margin"
-                                android:gravity="center_vertical"
-                                android:text="$12"
-                                android:textAppearance="?android:attr/textAppearanceMedium"
-                                android:textSize="21sp"
-                                android:textStyle="bold" />
                         </LinearLayout>
 
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/view_order_mini"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/activity_vertical_margin"
+                        android:background="@drawable/rounded_corner"
                         android:orientation="vertical" >
 
                         <LinearLayout
                             android:layout_width="fill_parent"
                             android:layout_height="fill_parent"
-                            android:layout_marginTop="@dimen/activity_vertical_margin"
-                            android:layout_weight="10"
-                            android:background="@drawable/rounded_corner" >
+                            android:layout_weight="10" >
 
                             <LinearLayout
                                 android:layout_width="0dp"
@@ -130,7 +108,8 @@
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="top"
                                     android:text="Martini"
-                                    android:textAppearance="?android:attr/textAppearanceLarge" />
+                                    android:textAppearance="?android:attr/textAppearanceLarge"
+                                    android:textSize="16sp" />
 
                                 <TextView
                                     android:id="@+id/view_order_description"
@@ -139,6 +118,26 @@
                                     android:text="1/3 oz Dry Vermouth"
                                     android:textSize="12sp" />
                             </LinearLayout>
+
+                            <TextView
+                                android:id="@+id/textView4"
+                                android:layout_width="wrap_content"
+                                android:layout_height="fill_parent"
+                                android:gravity="center_vertical"
+                                android:text="$"
+                                android:textAppearance="?android:attr/textAppearanceMedium"
+                                android:textSize="14sp" />
+
+                            <TextView
+                                android:id="@+id/view_order_price"
+                                android:layout_width="wrap_content"
+                                android:layout_height="fill_parent"
+                                android:layout_marginRight="@dimen/activity_horizontal_margin"
+                                android:gravity="center_vertical"
+                                android:text="12"
+                                android:textAppearance="?android:attr/textAppearanceMedium"
+                                android:textSize="14sp"
+                                android:textStyle="bold" />
 
                         </LinearLayout>
 
@@ -163,6 +162,109 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="80"
                             android:text="Accept" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/activity_vertical_margin"
+                        android:background="@drawable/rounded_corner"
+                        android:orientation="vertical" >
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="right|center_vertical"
+                            android:layout_margin="@dimen/activity_horizontal_margin" >
+
+                            <TextView
+                                android:id="@+id/TextView15"
+                                android:layout_width="wrap_content"
+                                android:layout_height="fill_parent"
+                                android:gravity="center_vertical"
+                                android:text="Price:"
+                                android:textAppearance="?android:attr/textAppearanceMedium"
+                                android:textSize="14sp" />
+
+                            <TextView
+                                android:id="@+id/TextView18"
+                                android:layout_width="wrap_content"
+                                android:layout_height="fill_parent"
+                                android:gravity="center_vertical"
+                                android:text="$"
+                                android:textAppearance="?android:attr/textAppearanceMedium"
+                                android:textSize="14sp" />
+
+                            <TextView
+                                android:id="@+id/TextView13"
+                                android:layout_width="wrap_content"
+                                android:layout_height="fill_parent"
+                                android:gravity="center_vertical"
+                                android:text="12"
+                                android:textAppearance="?android:attr/textAppearanceMedium"
+                                android:textSize="14sp"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:id="@+id/TextView17"
+                                android:layout_width="wrap_content"
+                                android:layout_height="fill_parent"
+                                android:gravity="center_vertical"
+                                android:text="  Tip, tax and fees: "
+                                android:textAppearance="?android:attr/textAppearanceMedium"
+                                android:textSize="12sp" />
+
+                            <TextView
+                                android:id="@+id/TextView11"
+                                android:layout_width="wrap_content"
+                                android:layout_height="fill_parent"
+                                android:gravity="center_vertical"
+                                android:text="$"
+                                android:textAppearance="?android:attr/textAppearanceMedium"
+                                android:textSize="14sp" />
+
+                            <TextView
+                                android:id="@+id/TextView14"
+                                android:layout_width="wrap_content"
+                                android:layout_height="fill_parent"
+                                android:gravity="center_vertical"
+                                android:text="2"
+                                android:textAppearance="?android:attr/textAppearanceMedium"
+                                android:textSize="14sp"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:id="@+id/TextView12"
+                                android:layout_width="wrap_content"
+                                android:layout_height="fill_parent"
+                                android:layout_weight="2"
+                                android:gravity="right|center_vertical"
+                                android:text="  Total:"
+                                android:textAppearance="?android:attr/textAppearanceMedium"
+                                android:textSize="12sp" />
+
+                            <TextView
+                                android:id="@+id/TextView09"
+                                android:layout_width="wrap_content"
+                                android:layout_height="fill_parent"
+                                android:gravity="center_vertical"
+                                android:text="$"
+                                android:textAppearance="?android:attr/textAppearanceMedium"
+                                android:textSize="16sp" />
+
+                            <TextView
+                                android:id="@+id/TextView08"
+                                android:layout_width="wrap_content"
+                                android:layout_height="fill_parent"
+                                android:layout_gravity="right"
+                                android:gravity="center_vertical"
+                                android:text="14"
+                                android:textAppearance="?android:attr/textAppearanceMedium"
+                                android:textSize="16sp"
+                                android:textStyle="bold" />
+
+                        </LinearLayout>
 
                     </LinearLayout>
 
