--- a/res/layout/drinks_main.xml
+++ b/res/layout/drinks_main.xml
@@ -14,7 +14,18 @@
         android:background="#dddddd"
         android:gravity="center_horizontal"
         android:orientation="vertical" >
-
+        
+		<LinearLayout android:id="@+id/view_custom_drinks"
+		    android:layout_width="match_parent"
+        	android:layout_height="wrap_content">
+        	
+			<TextView android:layout_width="match_parent" 
+			      android:layout_height="wrap_content" 
+			      android:text="@string/customDrinkLabel"
+			      android:textSize="20sp" 
+			      android:padding="10dp" 
+			      android:layout_marginLeft="20dp"/>
+		</LinearLayout>
         <ExpandableListView
             android:id="@+id/view_drinks_for_me_list"
             android:layout_width="match_parent"
